Utilizando CSS externo

--- a/index.html
+++ b/index.html
@@ -5,27 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto IOT Revolucionário</title>
-  <style>
-    h1 {
-      color: dodgerblue; font-family: monospace;
-    }
-
-    h3 {
-      color: indigo; font-family: monospace;
-    }
-    
-    span {
-      color: dimgray; font-family: Arial; font-size: 18px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Eu sou um título</h1>
   <h3>Eu sou um subtítulo</h3>
   <span>Eu sou um texto normal</span><br>
+  <span class="destaque">Eu sou um texto normal</span><br>
   <span>Eu sou um texto normal</span><br>
   <span>Eu sou um texto normal</span><br>
   <span>Eu sou um texto normal</span><br>
-  <span>Eu sou um texto normal</span><br>
+  <b>Eu estou em negrito</b>
+  <i class="destaque" id="destaqueEspecial">e eu estou em itálico</i>
 </body>
 </html>
