Primeira versão do header

--- a/index.html
+++ b/index.html
@@ -4,18 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto IOT Revolucionário</title>
+  <title>AcquaTec</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Eu sou um título</h1>
-  <h3>Eu sou um subtítulo</h3>
-  <span>Eu sou um texto normal</span><br>
-  <span class="destaque">Eu sou um texto normal</span><br>
-  <span>Eu sou um texto normal</span><br>
-  <span>Eu sou um texto normal</span><br>
-  <span>Eu sou um texto normal</span><br>
-  <b>Eu estou em negrito</b>
-  <i class="destaque" id="destaqueEspecial">e eu estou em itálico</i>
+  <div class="header">
+    <div class="container">
+      <h1>AcquaTec</h1>
+      <ul class="navbar">
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Simulador</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Cadastro</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="container">
+    <p>Texto 1</p>
+    <p>Texto 1</p>
+    <p>Texto 1</p>
+    <p>Texto 1</p>
+  </div>
 </body>
 </html>
