--- a/index.html
+++ b/index.html
@@ -4,26 +4,60 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AcquaTec</title>
+  <title>AcquaTec | Início</title>
   <link rel="stylesheet" href="style.css">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> -->
 </head>
 <body>
   <div class="header">
     <div class="container">
       <h1>AcquaTec</h1>
       <ul class="navbar">
-        <li><a href="#">Início</a></li>
+        <li class="agora"><a href="#">Início</a></li>
         <li><a href="#">Simulador</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="login.html">Login</a></li>
         <li><a href="#">Cadastro</a></li>
       </ul>
     </div>
   </div>
-  <div class="container">
-    <p>Texto 1</p>
-    <p>Texto 1</p>
-    <p>Texto 1</p>
-    <p>Texto 1</p>
+
+  <div class="banner">
+    <div class="container">
+      <p>Preservando <b>hoje</b> para existirem <b>amanhã</b>.</p>
+    </div>
+  </div>
+
+  <div class="social">
+    <div class="container">
+      <div class="titulo">
+        <h2>Nosso propósito</h2>
+      </div>
+      <div class="boxes">
+        <div class="box">
+          <img src="imgs/planet-earth_color.png" alt="">
+          <h4>Missão</h4>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="box">
+          <img src="imgs/lightbulb_color.png" alt="">
+          <h4>Visão</h4>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="box">
+          <img src="imgs/growth_color.png" alt="">
+          <h4>Valores</h4>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <h4>Feito com amor por um aluno SPTech &copy; 2022</h4>
+    </div>
   </div>
 </body>
 </html>
