Banner e Footer do site institucional e tela de login

--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
     <div class="container">
       <h1>AcquaTec</h1>
       <ul class="navbar">
-        <li><a href="#">Início</a></li>
+        <li class="agora"><a href="#">Início</a></li>
         <li><a href="#">Simulador</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="login.html">Login</a></li>
         <li><a href="#">Cadastro</a></li>
       </ul>
     </div>
   </div>
-  <div class="container">
-    <p>Texto 1</p>
-    <p>Texto 1</p>
-    <p>Texto 1</p>
-    <p>Texto 1</p>
+  
+  <div class="banner">
+    <div class="container">
+      <p>Preservando <b>hoje</b> para existirem <b>amanhã</b>.</p>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <h4>Feito com amor por um aluno SPTech &copy; 2022</h4>
+    </div>
   </div>
 </body>
 </html>
